k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: lumora-prod
  labels:
    app.kubernetes.io/name: lumora-ecommerce
    app.kubernetes.io/part-of: lumora-platform
    environment: prod
    cost-center: Multicloud-Mavericks
    owner: MultiCloud-Mavericks
    auto-stop: "true"
