k8s/02-mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: lumora-prod
  labels:
    app: mongodb
    cost-center: Multicloud-Mavericks
spec:
  ports:
    - port: 27017
      targetPort: 27017
      name: mongodb
  clusterIP: None
  selector:
    app: mongodb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: lumora-prod
  labels:
    app: mongodb
    cost-center: Multicloud-Mavericks
spec:
  serviceName: "mongodb-service"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
        cost-center: Multicloud-Mavericks
    spec:
      containers:
        - name: mongodb
          image: mongo:7.0
          ports:
            - containerPort: 27017
              name: mongodb
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-storage
        labels:
          cost-center: Multicloud-Mavericks
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
