k8s/05-service-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: lumora-prod
  labels:
    app: flask-app
    cost-center: Multicloud-Mavericks
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      name: http
  selector:
    app: flask-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: lumora-prod
  labels:
    cost-center: Multicloud-Mavericks
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 80
